# dependency-check-updates

./: .gitignore  Cargo.toml  README.md  package.json
.changepacks/: changepack_log_7IqVlY7ccSVP-seMz3MIB.json  changepack_log_AdJc8PL_PgJBomW0s7d7T.json  changepack_log_Bu8Dm5kOkIJVhGd3a7-D5.json  changepack_log_C3IOn4raXpBIQvGzepnoX.json  changepack_log_GX545CiPssGap7F5Djjsj.json  changepack_log_Ho7xNcjyFMOTpUfQL8Sbx.json  changepack_log_JYoRlP1VdKQBI5uLO-O2g.json  changepack_log_NNb8ImzAswTLvPGpWOVHn.json  changepack_log_RK5PzaVLnhZEXu0sr0amj.json  changepack_log_RT_7rqfc34MxrB219zoH-.json  changepack_log_TZ1vhANt_RYCkNxC4b5cY.json  changepack_log_V_c980ZHoX7fAHspd9P2y.json  changepack_log_kA_PL17fgf96n5rE09LX.json  changepack_log_phV68bs0FarthEh9_inls.json  changepack_log_t_nobxo8mS_H6-IR3WNuC.json  changepack_log_ypcnmAz12xgWbGpDQsrwa.json  config.json
.github/workflows/: CI.yml  check-deps.yml
.husky/: pre-commit
bridge/node/: .gitignore  Cargo.toml  main.js  package.json
bridge/node/src/: lib.rs
bridge/python/: .gitignore  Cargo.toml  pyproject.toml
bridge/python/src/: dcu.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: cleanup.rs  cli.rs  lib.rs  logging.rs  main.rs  output.rs  pipeline.rs  run.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  http.rs  lib.rs  manifest.rs  style.rs  types.rs  util.rs  version.rs
crates/dcu-cli/: Cargo.toml
crates/dcu-cli/src/: lib.rs  main.rs  output.rs
crates/dcu-core/: Cargo.toml
crates/dcu-core/src/: error.rs  lib.rs  manifest.rs  types.rs
crates/dcu-node/: Cargo.toml
crates/dcu-node/src/: lib.rs  parser.rs  patcher.rs  registry.rs  style.rs
crates/dcu-python/: Cargo.toml
crates/dcu-python/src/: lib.rs  parser.rs  registry.rs
crates/dcu-rust/: Cargo.toml
crates/dcu-rust/src/: lib.rs  parser.rs  registry.rs
crates/dcu-testkit/: Cargo.toml
crates/dcu-testkit/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs  parser.rs  patcher.rs  registry.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  parser.rs  patcher.rs  registry.rs  style.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs  parser.rs  registry.rs
crates/rust/: Cargo.toml
crates/rust/src/: lib.rs  parser.rs  registry.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
