[workspace]
resolver = "3"
members = ["crates/*", "bridge/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Internal
dependency-check-updates-core = { path = "crates/core" }
dependency-check-updates-node = { path = "crates/node" }
dependency-check-updates-rust = { path = "crates/rust" }
dependency-check-updates-python = { path = "crates/python" }
dependency-check-updates-cli = { path = "crates/cli" }
dependency-check-updates-testkit = { path = "crates/testkit" }

# External
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.51", features = ["rt", "macros"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls-no-provider",
  "charset",
  "http2",
  "system-proxy",
] }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "logging",
  "std",
  "tls12",
] }
node-semver = "2.2"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml_edit = "0.25"

napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3"
futures = "0.3"
owo-colors = "4.3"
insta = "1.47"
tempfile = "3.27"
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
