[package]
name = "dependency-check-updates-napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Node.js bridge for dependency-check-updates (N-API bindings)"
readme = "../../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
dependency-check-updates.workspace = true
tokio = { version = "1.51" }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
