[package]
name = "dependency-check-updates-napi"
version = "0.1.0"
description = "Node.js bridge for dependency-check-updates (N-API bindings)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
dependency-check-updates.workspace = true
tokio = { version = "1.51" }

[build-dependencies]
napi-build = "2.3"

[lints]
workspace = true
