[package]
name = "dependency-check-updates-python-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Python bridge for dependency-check-updates (standalone binary)"
readme = "../../README.md"
publish = false

[dependencies]
dependency-check-updates-cli.workspace = true
tokio.workspace = true

[[bin]]
name = "dependency-check-updates"
path = "src/main.rs"

[lints]
workspace = true
