[package]
name = "dependency-check-updates-python-bridge"
version = "0.1.0"
description = "Python bridge for dependency-check-updates (standalone binary)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
# NOTE: maturin (as of 1.10.x) mis-resolves `readme.workspace = true` by
# re-applying the workspace-relative path against this crate's directory,
# producing `bridge/python/../../../../README.md` which does not exist.
# Keeping an explicit path avoids the bug. `cargo check --workspace`
# itself is unaffected — only maturin's pyproject-metadata reader trips on it.
readme = "../../README.md"
publish = false

[dependencies]
dependency-check-updates.workspace = true
tokio.workspace = true

[[bin]]
name = "dependency-check-updates"
path = "src/main.rs"

# Short alias — maturin (bindings = "bin") emits a wheel script entry point
# for every `[[bin]]` here, so this gives Python users both `dcu` and
# `dependency-check-updates` after `pip install dependency-check-updates`.
# Lives in its own source file to silence Cargo's shared-path warning.
[[bin]]
name = "dcu"
path = "src/dcu.rs"

[lints]
workspace = true
