[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "dependency-check-updates"
version = "0.2.0"
description = "Fast multi-ecosystem dependency updater: package.json, Cargo.toml, pyproject.toml in a single CLI (like npm-check-updates for every language)"
requires-python = ">=3.11"
readme = "../../README.md"
license = { text = "MIT" }
authors = [
    { name = "dev-five-git" },
]
keywords = [
    "dependency",
    "dependencies",
    "update",
    "updater",
    "ncu",
    "npm-check-updates",
    "npm",
    "cargo",
    "pypi",
    "cli",
    "rust",
    "multi-ecosystem",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/dev-five-git/dependency-check-updates"
Repository = "https://github.com/dev-five-git/dependency-check-updates"
Issues = "https://github.com/dev-five-git/dependency-check-updates/issues"
Changelog = "https://github.com/dev-five-git/dependency-check-updates/releases"

[tool.maturin]
bindings = "bin"
strip = true
