[package]
name = "dependency-check-updates-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "dependency-check-updates"
path = "src/main.rs"

[dependencies]
dependency-check-updates-core.workspace = true
dependency-check-updates-node.workspace = true
dependency-check-updates-rust.workspace = true
dependency-check-updates-python.workspace = true
rustls.workspace = true
clap.workspace = true
serde_json.workspace = true
miette.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
owo-colors.workspace = true

[lints]
workspace = true
