[package]
name = "dependency-check-updates"
version = "0.1.10"
description = "Fast multi-ecosystem dependency updater: package.json, Cargo.toml, pyproject.toml in a single CLI (like npm-check-updates for every language)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dependency-check-updates"
path = "src/main.rs"

[dependencies]
dependency-check-updates-core.workspace = true
dependency-check-updates-node.workspace = true
dependency-check-updates-rust.workspace = true
dependency-check-updates-python.workspace = true
rustls.workspace = true
clap.workspace = true
serde_json.workspace = true
miette.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
owo-colors.workspace = true
semver = "1.0"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tempfile.workspace = true
dependency-check-updates-node.workspace = true
dependency-check-updates-rust.workspace = true
dependency-check-updates-python.workspace = true

[lints]
workspace = true
