[package]
name = "dependency-check-updates-core"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
ignore.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
