[package]
name = "dependency-check-updates-core"
version = "0.1.14"
description = "Shared traits and types for dependency-check-updates (ManifestHandler, RegistryClient, Scanner)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
ignore.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
node-semver.workspace = true
semver = "1.0"
pep440_rs = "0.7.3"

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
