[package]
name = "dcu-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "dcu"
path = "src/main.rs"

[dependencies]
dcu-core.workspace = true
dcu-node.workspace = true
dcu-rust.workspace = true
dcu-python.workspace = true
rustls.workspace = true
clap.workspace = true
serde_json.workspace = true
miette.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
owo-colors.workspace = true

[lints]
workspace = true
