[package]
name = "dcu-python"
version = "0.1.0"
description = "Python ecosystem support for dcu: pyproject.toml parsing (toml_edit) + PyPI registry"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dcu-core.workspace = true
toml_edit.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
