[package]
name = "dependency-check-updates-node"
version = "0.1.7"
description = "Node.js ecosystem support for dependency-check-updates: package.json parsing, npm registry, version resolution"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dependency-check-updates-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }
node-semver.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rustls.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
