[package]
name = "dependency-check-updates-python"
version = "0.1.4"
description = "Python ecosystem support for dependency-check-updates: pyproject.toml parsing (toml_edit) + PyPI registry"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dependency-check-updates-core.workspace = true
toml_edit.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rustls.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
