[package]
name = "dependency-check-updates-rust"
version = "0.1.1"
description = "Rust ecosystem support for dependency-check-updates: Cargo.toml parsing (toml_edit) + crates.io registry"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dependency-check-updates-core.workspace = true
toml_edit.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }
semver = "1.0"
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rustls.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
