[package]
name = "dependency-check-updates-testkit"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dependency-check-updates-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
